# workspace--gk

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.optimized  Justfile  Makefile  Makefile.prod  PROJECT_STATUS.md  README.md  ROADMAP.md  STATUS_QUICK.md  add-user.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  run-e2e-tests.sh  send-smtp-raw.py  send-test-email.py  test-imap-all.py  test-imap-e2e.py  test-imap-full.py  test-imap.py  test-imap.sh  test-websocket.html  test_e2e.sh  test_spf_dkim.py
.claude/: README.md  agents.md  context.md  rules.md
.claude/agents/: README.md  bug-fix.md  code-quality.md  code-review.md  dependency.md  devops.md  documentation.md  feature-dev.md  performance.md  refactoring.md  release.md  security-audit.md  test-coverage.md
.claude/commands/: audit-quality.md  audit-security.md  bugfix.md  deps.md  devops.md  docs.md  feature.md  perf.md  refactor.md  release.md  review.md  tests.md
ai-runtime/: Cargo.toml  README.md
ai-runtime/src/: main.rs  summary.rs  websocket.rs
ai-runtime/src/llm/: mock.rs  mod.rs  ollama.rs
ai-runtime/src/mcp/: mod.rs  registry.rs  server.rs  tool.rs
ai-runtime/tests/: integration_test.rs
docs/: ADMIN_UI_IMPLEMENTATION.md  ADMIN_UI_PLAN.md  CONTRIBUTING.md  FEATURES_PROMPTS.md  FULL_SESSION_SUMMARY.md  INDEX.md  PHASE_2_COMPLETION_SUMMARY.md  PRODUCTION_READY_PLAN.md  QUICK_START.md  README.md  ROADMAP_PHASE_2.md  SECURITY.md  SECURITY_IMPLEMENTATION.md  SESSION_SUMMARY.md  SPRINT_11_SPF_DKIM.md  SPRINT_16_MAIL_IN_A_BOX.md  SPRINT_17_PLAN.md  WEB_UI_PLAN.md  ai-runtime_CLAUDE.md  chat-rs_CLAUDE.md  dav-rs_CLAUDE.md  mail-rs_CLAUDE.md  mcp-mail-server_CLAUDE.md  proxy-rs_CLAUDE.md  web-ui_CLAUDE.md
e2e-tests/: Cargo.toml
e2e-tests/src/: lib.rs
e2e-tests/tests/: e2e_test_1_send_email.rs  e2e_test_2_receive_email.rs  e2e_test_3_conversation.rs  e2e_test_4_ai_assistant.rs  e2e_test_5_multi_users.rs
e2e-tests/tests/e2e/: helpers.rs  imap_client.rs  mod.rs  smtp_client.rs  websocket_client.rs
mail-rs/: Cargo.toml  README-CLI.md  README.md  config.example.toml  config.toml
mail-rs/data/maildir/admin@delfour.co/new/: 1764583853.62188.fedora  1764583861.62188.fedora  1764744947.36921.fedora  1764745017.36921.fedora  1764745159.52029.fedora  1764745242.52029.fedora  1764745243.52029.fedora  1764745251.52029.fedora  1764745334.52029.fedora  1764745344.52029.fedora  1764745345.52029.fedora  1764745452.52029.fedora  1764767056.52029.fedora  1765007403.33917.fedora
mail-rs/data/maildir/cc@example.com/new/: 1764745242.52029.fedora  1764745333.52029.fedora  1764745344.52029.fedora  1764745451.52029.fedora
mail-rs/data/maildir/delfour.k@gmail.com/new/: 1764273559.204185.fedora
mail-rs/data/maildir/test@delfour.co/new/: 1764273210.204185.fedora  1764273383.204185.fedora  1764275385.204185.fedora
mail-rs/docs/: DEPLOYMENT.md
mail-rs/mail-rs/test_data/dkim/: dkim_private.pem
mail-rs/mail-rs/test_data/dkim/mail-rs/test_data/dkim/: dkim_private.pem  dkim_public.pem
mail-rs/src/: config.rs  error.rs  lib.rs  main.rs
mail-rs/src/admin/: backup.rs  diagnostics.rs  dns.rs  mod.rs  ssl.rs
mail-rs/src/antispam/: greylist.rs  mod.rs  types.rs
mail-rs/src/api/: admin.rs  admin.rs.wip  auth.rs  auto_reply.rs  caldav.rs  greylisting.rs  handlers.rs  import_export.rs  metrics.rs  mfa.rs  mod.rs  monitoring.rs  quotas.rs  search.rs  security_stats.rs  server.rs  sieve.rs  spam.rs  templates.rs  web.rs
mail-rs/src/authentication/: dkim.rs  dmarc.rs  mod.rs  spf.rs  types.rs
mail-rs/src/auto_reply/: manager.rs  mod.rs  sender.rs  types.rs
mail-rs/src/caldav/: calendar.rs  contacts.rs  manager.rs  mod.rs  types.rs
mail-rs/src/imap/: commands.rs  idle.rs  mailbox.rs  mod.rs  server.rs  session.rs
mail-rs/src/import_export/: manager.rs  mbox.rs  mod.rs  types.rs
mail-rs/src/mfa/: manager.rs  mod.rs  totp.rs  types.rs
mail-rs/src/migration/: eml.rs  manager.rs  mbox.rs  mod.rs  types.rs
mail-rs/src/mime/: mod.rs  parser.rs  types.rs
mail-rs/src/quota/: manager.rs  mod.rs  types.rs
mail-rs/src/search/: indexer.rs  manager.rs  mod.rs  types.rs
mail-rs/src/security/: auth.rs  mod.rs  rate_limit.rs  tls.rs
mail-rs/src/sieve/: executor.rs  manager.rs  mod.rs  parser.rs  types.rs
mail-rs/src/smtp/: client.rs  commands.rs  mod.rs  queue.rs  server.rs  session.rs
mail-rs/src/spam/: manager.rs  mod.rs  scorer.rs  types.rs
mail-rs/src/storage/: maildir.rs  mod.rs
mail-rs/src/templates/: manager.rs  mod.rs  renderer.rs  types.rs
mail-rs/src/utils/: dkim.rs  dkim_signer.rs  dmarc.rs  dns.rs  dns_validator.rs  email.rs  mod.rs  spf.rs
mail-rs/templates/: auto_reply.html  backups.html  base.html  caldav.html  chat_app.html  chat_login.html  dashboard.html  diagnostics.html  dns.html  email_templates.html  greylisting.html  import_export.html  login.html  mfa.html  monitoring.html  quotas.html  search.html  security.html  settings.html  sieve.html  spam.html  ssl.html  users.html
mail-rs/test_data/dkim/: README.md
mail-rs/tests/: auto_reply_test.rs  imap_write_operations_test.rs  smtp_auth_test.rs  smtp_commands_test.rs  smtp_integration_test.rs  smtp_sender_test.rs  smtp_test.rs  templates_integration_test.rs
mail-rs/tests/integration/: mod.rs  smtp_integration_test.rs
mcp-mail-server/: Cargo.toml  README.md
mcp-mail-server/src/: main.rs
mcp-mail-server/tests/: integration_test.rs
proxy-rs/: Cargo.toml  config.example.toml
proxy-rs/src/: acme.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  proxy.rs  router.rs  tls.rs
scripts/: install.sh  manage-secrets.sh
tests/: README.md
web-ui/: ADMIN_FEATURES.md  Dockerfile  nginx.conf  package-lock.json  package.json
web-ui/src/: App.tsx  index.css
web-ui/src/components/Auth/: AuthForm.tsx
web-ui/src/components/Chat/: Chat.tsx  ChatInput.tsx  EmailCard.tsx  Message.tsx
web-ui/src/hooks/: useStats.ts  useUsers.ts  useWebSocket.ts
web-ui/src/lib/: api.ts
web-ui/src/pages/admin/: UsersPage.tsx  (+1 more)
web-ui/src/types/: index.ts
(+4 files in other folders)
