[package]
name = "ai-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# HTTP client (for MCP servers)
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
regex = "1"

# Config
config = { workspace = true }
