[package]
name = "e2e-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# WebSocket client
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
