[package]
name = "mail-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# TLS
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = "0.11"

# Mail parsing/generation
mail-parser = "0.9"
mail-builder = "0.3"

# Mail authentication (SPF/DKIM/DMARC)
mail-auth = "0.4"

# DNS
trust-dns-resolver = "0.23"

# HTTP API
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
reqwest = { version = "0.11", features = ["json"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
base64 = "0.21"

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Crypto
ring = "0.17"
rsa = "0.9"
sha2 = "0.10"
rand = "0.8"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Filesystem watching (for IMAP IDLE)
notify = "6.1"

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
bytes = "1"
futures = "0.3"
anyhow = { workspace = true }
thiserror = { workspace = true }
gethostname = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
config = { workspace = true }

[dev-dependencies]
# Testing
mockall = "0.12"
tempfile = "3"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport"] }
