[package]
name = "mcp-mail-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Local dependencies
mail-rs = { path = "../mail-rs" }

# Async runtime
tokio = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
anyhow = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
