[package]
name = "proxy-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP reverse proxy with automatic TLS (Let's Encrypt)"

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP server/client
axum = { workspace = true }
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }

# TLS
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

# ACME (Let's Encrypt)
# instant-acme = "0.4"

# Certificate generation
rcgen = "0.13"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
anyhow = { workspace = true }
thiserror = { workspace = true }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Config
config = { workspace = true }

[dev-dependencies]
tempfile = "3"
